--- a/src/app/features/about/page/about.component.html
+++ b/src/app/features/about/page/about.component.html
@@ -6,7 +6,7 @@
 <div class="w-full flex flex-col md:flex-row flex-wrap justify-evenly items-center ">
 <div class="w-full md:w-1/2 flex flex-col justify-center items-start gap-4 ">
     <h1 class="text-xl md:text-2xl text-left capitalize text-gray-50 font-semibold">
-    {{'about.OurAbout' | translate}} 
+    {{'about.ourAbout' | translate}} 
     <span class="font-extrabold text-mz-primary text-2xl md:text-3xl">{{'about.mz' | translate}}</span>
     </h1>
 
