--- a/src/app/categories/components/category-details/components/video-interaction/video-interaction.component.html
+++ b/src/app/categories/components/category-details/components/video-interaction/video-interaction.component.html
@@ -7,10 +7,7 @@
     </div>
     
     <ul class="flex justify-center items-center text-gray-100 gap-5 capitalize font-[500]" >
-    <app-thumbs  
-    class="flex justify-center items-center gap-5"
-    reactionTableName="category_like_dislike"
-    />
+    <app-thumbs  class="flex justify-center items-center gap-5"/>
     <li title="share" class="">
     <a class="cursor-pointer ">
     <i class="fa-regular fa-bookmark"></i> 
